--- a/portfolio.css
+++ b/portfolio.css
@@ -8,12 +8,14 @@ body {
   margin: 0;
   padding: 0;
 }
-
+#profile{
+    border-radius:50%;
+}
 .intro {
   top: 0;
   background: #e0ebf9
   min-height: 55vh;
-  padding-top: 45vh;
+  padding-top: 25vh;
   /*   line-height: 100vh; */
   /*   width:100%;
   height:96vh;
