--- a/portfolio.css
+++ b/portfolio.css
@@ -143,6 +143,11 @@ nav ul li a:hover {
   color: green;
 }
 
+p {
+  passing: 20px;
+  margin: 20px;
+}
+
 footer {
   padding: 20px;
   background: #22313F;
